--- a/docx-to-readme.html
+++ b/docx-to-readme.html
@@ -97,6 +97,16 @@
       Single-file client-side tool. Supports <code>.docx</code> (Mammoth) and pasted HTML/plain text. Not all Word features (track changes, complex tables) are preserved. Images are embedded as base64 if enabled.
     </footer>
   </div>
+<section style="text-align:center; margin-top:20px;">
+  <a href="https://github.com/afnan-nex" target="_blank" style="display:inline-flex;align-items:center;margin:0 10px;text-decoration:none;color:inherit;">
+    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" style="width:32px;height:32px;border-radius:50%;margin-right:8px;">
+    afnan_nex
+  </a>
+  <a href="https://www.instagram.com/afnan_nex" target="_blank" style="display:inline-flex;align-items:center;margin:0 10px;text-decoration:none;color:inherit;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width:32px;height:32px;border-radius:50%;margin-right:8px;">
+    afnan_nex
+  </a>
+</section>
 
   <!-- Libraries (CDN) -->
   <script src="https://unpkg.com/mammoth/mammoth.browser.min.js"></script>
