--- a/docx-to-readme.html
+++ b/docx-to-readme.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>All-in-one DOCX → README.md Converter</title>
-  <meta name="description" content="Upload a .docx file and convert it to a GitHub-ready README.md (client-side, single file)">
+  <meta name="description" content="Upload a .docx file and convert it to a GitHub-ready README.md">
     <!-- Favicons -->
   <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjKVqFVNkBnft8At0R1hPqXtq0MHhJ2MseuCZMqilvsz8YNclsi37lYmSwJf0PkzajbaTjt6e3nfHKHCKau31Nj_EdPKq2pKdeDx7R7pUNo6bEw81FKpFZ661vDjVaKIi1g04NaCPhLrWrVUbKlDWThIT41rGoJbHmU678phR41cJHUiV_-nrEbkPEQAlM/s16000/svgviewer-png-output.png" rel="icon" loading="lazy">
   <link href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjKVqFVNkBnft8At0R1hPqXtq0MHhJ2MseuCZMqilvsz8YNclsi37lYmSwJf0PkzajbaTjt6e3nfHKHCKau31Nj_EdPKq2pKdeDx7R7pUNo6bEw81FKpFZ661vDjVaKIi1g04NaCPhLrWrVUbKlDWThIT41rGoJbHmU678phR41cJHUiV_-nrEbkPEQAlM/s16000/svgviewer-png-output.png" rel="apple-touch-icon" loading="lazy">
@@ -38,7 +38,7 @@
     <header>
       <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='36' height='36' viewBox='0 0 24 24'><rect rx='6' width='24' height='24' fill='%237c3aed'/><text x='50%' y='55%' font-size='12' text-anchor='middle' fill='white' font-family='Arial'>MD</text></svg>" alt="logo">
       <div>
-        <h1>DOCX → README.md — All‑in‑one (client-side)</h1>
+        <h1>DOCX → README.md — All‑in‑one</h1>
         <div class="muted">Upload a <code>.docx</code> file (Word) or paste HTML/plain text and convert it to GitHub-ready Markdown. Images are embedded as base64.</div>
       </div>
     </header>
