--- a/docx-to-readme.html
+++ b/docx-to-readme.html
@@ -39,7 +39,7 @@
       <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='36' height='36' viewBox='0 0 24 24'><rect rx='6' width='24' height='24' fill='%237c3aed'/><text x='50%' y='55%' font-size='12' text-anchor='middle' fill='white' font-family='Arial'>MD</text></svg>" alt="logo">
       <div>
         <h1>DOCX → README.md — All‑in‑one</h1>
-        <div class="muted">Upload a <code>.docx</code> file (Word) or paste HTML/plain text and convert it to GitHub-ready Markdown. Images are embedded as base64.</div>
+        <div class="muted">Upload a <code>.docx</code> file (Word) or paste HTML/plain text and convert it to GitHub-ready Markdown. Images are embedded as base64.<br>Check out this <a href="https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax?utm_source=chatgpt.com" target="_blank" style="color: #FCCA12;"><strong>Blog</strong></a> to learn how to edit your <strong>README.md</strong> more effectively.</div>
       </div>
     </header>
 
